--- a/nlp-with-sequence-models/week-4/C3_W4_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-4/C3_W4_Assignment.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -80,15 +80,7 @@
     "id": "zdACgs491cs2",
     "outputId": "b31042ef-845b-46b8-c783-185e96b135f7"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:tokens_length=568 inputs_length=512 targets_length=114 noise_density=0.15 mean_noise_span_length=3.0 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import nltk\n",
@@ -119,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -129,114 +121,7 @@
     "id": "sXWBVGWnpity",
     "outputId": "afa90d4d-fed7-43b8-bcba-48c95d600ad5"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of question pairs:  404351\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>qid1</th>\n",
-       "      <th>qid2</th>\n",
-       "      <th>question1</th>\n",
-       "      <th>question2</th>\n",
-       "      <th>is_duplicate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>What is the step by step guide to invest in sh...</td>\n",
-       "      <td>What is the step by step guide to invest in sh...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>What is the story of Kohinoor (Koh-i-Noor) Dia...</td>\n",
-       "      <td>What would happen if the Indian government sto...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>How can I increase the speed of my internet co...</td>\n",
-       "      <td>How can Internet speed be increased by hacking...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Why am I mentally very lonely? How can I solve...</td>\n",
-       "      <td>Find the remainder when [math]23^{24}[/math] i...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Which one dissolve in water quikly sugar, salt...</td>\n",
-       "      <td>Which fish would survive in salt water?</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id  qid1  qid2                                          question1  \\\n",
-       "0   0     1     2  What is the step by step guide to invest in sh...   \n",
-       "1   1     3     4  What is the story of Kohinoor (Koh-i-Noor) Dia...   \n",
-       "2   2     5     6  How can I increase the speed of my internet co...   \n",
-       "3   3     7     8  Why am I mentally very lonely? How can I solve...   \n",
-       "4   4     9    10  Which one dissolve in water quikly sugar, salt...   \n",
-       "\n",
-       "                                           question2  is_duplicate  \n",
-       "0  What is the step by step guide to invest in sh...             0  \n",
-       "1  What would happen if the Indian government sto...             0  \n",
-       "2  How can Internet speed be increased by hacking...             0  \n",
-       "3  Find the remainder when [math]23^{24}[/math] i...             0  \n",
-       "4            Which fish would survive in salt water?             0  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = pd.read_csv(\"questions.csv\")\n",
     "N=len(data)\n",
@@ -256,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -266,15 +151,7 @@
     "id": "z00A7vEMpit1",
     "outputId": "c12ae7e8-a959-4f56-aa29-6ad34abc1c81"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train set: 300000 Test set: 10240\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N_train = 300000\n",
     "N_test  = 10*1024\n",
@@ -298,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -308,16 +185,7 @@
     "id": "Xi_TwXxxpit4",
     "outputId": "f146046f-9c0d-4d8a-ecf8-8d6a4a5371f7"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of duplicate questions:  111486\n",
-      "indexes of first ten duplicate questions: [5, 7, 11, 12, 13, 15, 16, 18, 20, 29]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "td_index = (data_train['is_duplicate'] == 1).to_numpy()\n",
     "td_index = [i for i, x in enumerate(td_index) if x] \n",
@@ -327,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -337,17 +205,7 @@
     "id": "3I9oXSsKpit7",
     "outputId": "6f6bd3a1-219f-4fb3-a524-450c38bf44ba"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Astrology: I am a Capricorn Sun Cap moon and cap rising...what does that say about me?\n",
-      "I'm a triple Capricorn (Sun, Moon and ascendant in Capricorn) What does this say about me?\n",
-      "is_duplicate:  1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data_train['question1'][5])  #  Example of question duplicates (first one in data)\n",
     "print(data_train['question2'][5])\n",
@@ -356,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -386,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -396,29 +254,7 @@
     "id": "joyrS1XEpLWn",
     "outputId": "3257cde7-3164-40d9-910e-fa91eae917a0"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAINING QUESTIONS:\n",
-      "\n",
-      "Question 1:  Astrology: I am a Capricorn Sun Cap moon and cap rising...what does that say about me?\n",
-      "Question 2:  I'm a triple Capricorn (Sun, Moon and ascendant in Capricorn) What does this say about me? \n",
-      "\n",
-      "Question 1:  What would a Trump presidency mean for current international master’s students on an F1 visa?\n",
-      "Question 2:  How will a Trump presidency affect the students presently in US or planning to study in US? \n",
-      "\n",
-      "TESTING QUESTIONS:\n",
-      "\n",
-      "Question 1:  How do I prepare for interviews for cse?\n",
-      "Question 2:  What is the best way to prepare for cse? \n",
-      "\n",
-      "is_duplicate = 0 \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('TRAINING QUESTIONS:\\n')\n",
     "print('Question 1: ', Q1_train_words[0])\n",
@@ -448,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -466,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -476,15 +312,7 @@
     "id": "m9ZmfpGWpiuI",
     "outputId": "d2995c9a-92b4-4892-d34b-c77b94b27134"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The length of the vocabulary is:  36268\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Building the vocabulary with the train set         (this might take a minute)\n",
     "from collections import defaultdict\n",
@@ -504,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -514,17 +342,7 @@
     "id": "TTMRF8eZpiuK",
     "outputId": "f81d4dc1-7cf9-4476-a454-467b54fe4dc4"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(vocab['<PAD>'])\n",
     "print(vocab['Astrology'])\n",
@@ -533,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -548,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -558,16 +376,7 @@
     "id": "3QgGE9KlpiuP",
     "outputId": "19c3cf93-cf0d-4f8f-da99-e75481f16599"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train set has reduced to:  111486\n",
-      "Test set length:  10240\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Train set has reduced to: ', len(Q1_train) ) \n",
     "print('Test set length: ', len(Q1_test) ) "
@@ -588,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -609,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -619,27 +428,7 @@
     "id": "Dpawm38dpiuU",
     "outputId": "ef1aa65b-c89b-46f9-a9cf-f73748f1ee56"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "first question in the train set:\n",
-      "\n",
-      "Astrology: I am a Capricorn Sun Cap moon and cap rising...what does that say about me? \n",
-      "\n",
-      "encoded version:\n",
-      "[2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21] \n",
-      "\n",
-      "first question in the test set:\n",
-      "\n",
-      "How do I prepare for interviews for cse? \n",
-      "\n",
-      "encoded version:\n",
-      "[32, 38, 4, 107, 65, 1015, 65, 11509, 21]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('first question in the train set:\\n')\n",
     "print(Q1_train_words[0], '\\n') \n",
@@ -664,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -674,17 +463,7 @@
     "id": "BmhrWPtgpiuY",
     "outputId": "7272fb74-79e6-499a-ce95-d11b9edcd64a"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of duplicate questions:  111486\n",
-      "The length of the training set is:   89188\n",
-      "The length of the validation set is:  22298\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Splitting the data\n",
     "cut_off = int(len(Q1_train)*.8)\n",
@@ -729,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -811,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -821,20 +600,7 @@
     "id": "ZFZeBPnW8Mlb",
     "outputId": "7a31cd19-55dc-4b97-f288-6c59c6a34b53"
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +=: 'int' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-c646320c01a8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mres1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mres2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_generator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_Q1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_Q2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"First questions  : \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mres1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Second questions : \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mres2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-16-f1b211e4ef1c>\u001b[0m in \u001b[0;36mdata_generator\u001b[0;34m(Q1, Q2, batch_size, pad, shuffle)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0;31m# increment idx by 1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m         \u001b[0midx\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m         \u001b[0;31m# append q1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0minput1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +=: 'int' and 'NoneType'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size = 2\n",
     "res1, res2 = next(data_generator(train_Q1, train_Q2, batch_size))\n",
@@ -960,10 +726,10 @@
     "    \n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    q_processor = tl.Serial(  # Processor will run on Q1 and Q2.\n",
-    "        None, # Embedding layer\n",
-    "        None, # LSTM layer\n",
-    "        None, # Mean over columns\n",
-    "        None  # Apply normalize function\n",
+    "        tl.Embedding(vocab_size, d_model), # Embedding layer\n",
+    "        tl.LSTM(d_model), # LSTM layer\n",
+    "        tl.Mean(axis=1), # Mean over columns\n",
+    "        tl.Fn('Normalize', lambda x: normalize(x))  # Apply normalize function\n",
     "    )  # Returns one vector of shape [batch_size, d_model].\n",
     "    \n",
     "    ### END CODE HERE ###\n",
