--- a/nlp-with-sequence-models/week-4/C3_W4_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-4/C3_W4_Assignment.ipynb
@@ -893,28 +893,28 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    \n",
     "    # use fastnp to take the dot product of the two batches (don't forget to transpose the second argument)\n",
-    "    scores = None  # pairwise cosine sim\n",
+    "    scores = fastnp.dot(v1, v2.T)  # pairwise cosine sim\n",
     "    # calculate new batch size\n",
     "    batch_size = len(scores)\n",
     "    # use fastnp to grab all postive `diagonal` entries in `scores`\n",
-    "    positive = None  # the positive ones (duplicates)\n",
+    "    positive = fastnp.diagonal(scores)  # the positive ones (duplicates)\n",
     "    # multiply `fastnp.eye(batch_size)` with 2.0 and subtract it out of `scores`\n",
-    "    negative_without_positive = None\n",
+    "    negative_without_positive = scores - 2.0 * fastnp.eye(batch_size)\n",
     "    # take the row by row `max` of `negative_without_positive`. \n",
     "    # Hint: negative_without_positive.max(axis = [?])  \n",
-    "    closest_negative = None\n",
+    "    closest_negative = negative_without_positive.max(axis=1)\n",
     "    # subtract `fastnp.eye(batch_size)` out of 1.0 and do element-wise multiplication with `scores`\n",
-    "    negative_zero_on_duplicate = None\n",
+    "    negative_zero_on_duplicate = scores * (1.0 - fastnp.eye(batch_size))\n",
     "    # use `fastnp.sum` on `negative_zero_on_duplicate` for `axis=1` and divide it by `(batch_size - 1)` \n",
-    "    mean_negative = None\n",
+    "    mean_negative = np.sum(negative_zero_on_duplicate, axis=1) / (batch_size-1)\n",
     "    # compute `fastnp.maximum` among 0.0 and `A`\n",
     "    # A = subtract `positive` from `margin` and add `closest_negative` \n",
-    "    triplet_loss1 = None\n",
+    "    triplet_loss1 = fastnp.maximum(0.0, margin - positive + closest_negative)\n",
     "    # compute `fastnp.maximum` among 0.0 and `B`\n",
     "    # B = subtract `positive` from `margin` and add `mean_negative`\n",
-    "    triplet_loss2 = None\n",
+    "    triplet_loss2 = fastnp.maximum(0.0, margin - positive + mean_negative)\n",
     "    # add the two losses together and take the `fastnp.mean` of it\n",
-    "    triplet_loss = None\n",
+    "    triplet_loss = fastnp.mean(triplet_loss1 + triplet_loss2)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
