Implemented "train_model"

--- a/nlp-with-sequence-models/week-4/C3_W4_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-4/C3_W4_Assignment.ipynb
@@ -1067,15 +1067,15 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "\n",
     "    train_task = training.TrainTask(\n",
-    "        labeled_data=None,       # Use generator (train)\n",
-    "        loss_layer=None,         # Use triplet loss. Don't forget to instantiate this object\n",
-    "        optimizer=None,          # Don't forget to add the learning rate parameter\n",
+    "        labeled_data=train_generator,       # Use generator (train)\n",
+    "        loss_layer=TripletLoss(),         # Use triplet loss. Don't forget to instantiate this object\n",
+    "        optimizer=trax.optimizers.Adam(0.01),          # Don't forget to add the learning rate parameter\n",
     "        lr_schedule=lr_schedule, # Use Trax multifactor schedule function\n",
     "    )\n",
     "\n",
     "    eval_task = training.EvalTask(\n",
-    "        labeled_data=None,       # Use generator (val)\n",
-    "        metrics=[None],          # Use triplet loss. Don't forget to instantiate this object\n",
+    "        labeled_data=val_generator,       # Use generator (val)\n",
+    "        metrics=[TripletLoss()],          # Use triplet loss. Don't forget to instantiate this object\n",
     "    )\n",
     "    \n",
     "    ### END CODE HERE ###\n",
