--- a/nlp-with-sequence-models/week-4/C3_W4_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-4/C3_W4_Assignment.ipynb
@@ -1211,22 +1211,23 @@
     "        # Call the data generator (built in Ex 01) with shuffle=False using next()\n",
     "        # use batch size chuncks of questions as Q1 & Q2 arguments of the data generator. e.g x[i:i + batch_size]\n",
     "        # Hint: use `vocab['<PAD>']` for the `pad` argument of the data generator\n",
-    "        q1, q2 = None\n",
+    "        q1, q2 = next(data_generator(\n",
+    "            test_Q1[i:i + batch_size], test_Q2[i:i + batch_size], batch_size, vocab['<PAD>'], shuffle=False))\n",
     "        # use batch size chuncks of actual output targets (same syntax as example above)\n",
-    "        y_test = None\n",
+    "        y_test = y[i:i + batch_size]\n",
     "        # Call the model\n",
-    "        v1, v2 = None\n",
+    "        v1, v2 = model((q1, q2))\n",
     "\n",
     "        for j in range(batch_size):\n",
     "            # take dot product to compute cos similarity of each pair of entries, v1[j], v2[j]\n",
     "            # don't forget to transpose the second argument\n",
-    "            d = None\n",
+    "            d = np.dot(v1[j], v2[j].T)\n",
     "            # is d greater than the threshold?\n",
-    "            res = None\n",
+    "            res = d > threshold\n",
     "            # increment accurancy if y_test is equal `res`\n",
-    "            accuracy += None\n",
+    "            accuracy += (y_test[j] == res)\n",
     "    # compute accuracy using accuracy and total length of test questions\n",
-    "    accuracy = None\n",
+    "    accuracy = accuracy / len(test_Q1)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return accuracy"
