--- a/nlp-with-sequence-models/week-4/C3_W4_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-4/C3_W4_Assignment.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -80,7 +80,19 @@
     "id": "zdACgs491cs2",
     "outputId": "b31042ef-845b-46b8-c783-185e96b135f7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'trax'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-d4235c83d668>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtrax\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtrax\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlayers\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mtl\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtrax\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msupervised\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtraining\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'trax'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import nltk\n",
@@ -1189,7 +1201,7 @@
    "source": [
     "# UNQ_C5 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "# GRADED FUNCTION: classify\n",
-    "def classify(test_Q1, test_Q2, y, threshold, model, vocab, data_generator=data_generator, batch_size=64):\n",
+    "    def classify(test_Q1, test_Q2, y, threshold, model, vocab, data_generator=data_generator, batch_size=64):\n",
     "    \"\"\"Function to test the accuracy of the model.\n",
     "\n",
     "    Args:\n",
@@ -1330,27 +1342,27 @@
     "    \"\"\"\n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    # use `nltk` word tokenize function to tokenize\n",
-    "    q1 = None  # tokenize\n",
-    "    q2 = None  # tokenize\n",
+    "    q1 = nltk.word_tokenize(question1)  # tokenize\n",
+    "    q2 = nltk.word_tokenize(question2)  # tokenize\n",
     "    Q1, Q2 = [], []\n",
     "    for word in q1:  # encode q1\n",
     "        # increment by checking the 'word' index in `vocab`\n",
-    "        Q1 += None\n",
+    "        Q1 += [vocab[word]]\n",
     "    for word in q2:  # encode q2\n",
     "        # increment by checking the 'word' index in `vocab`\n",
-    "        Q2 += None\n",
+    "        Q2 += [vocab[word]]\n",
     "        \n",
     "    # Call the data generator (built in Ex 01) using next()\n",
     "    # pass [Q1] & [Q2] as Q1 & Q2 arguments of the data generator. Set batch size as 1\n",
     "    # Hint: use `vocab['<PAD>']` for the `pad` argument of the data generator\n",
-    "    Q1, Q2 = None\n",
+    "    Q1, Q2 = next(data_generator([Q1], [Q2], 1, vocab['<PAD>']))\n",
     "    # Call the model\n",
-    "    v1, v2 = None\n",
+    "    v1, v2 = model((Q1, Q2))\n",
     "    # take dot product to compute cos similarity of each pair of entries, v1, v2\n",
     "    # don't forget to transpose the second argument\n",
-    "    d = None\n",
+    "    d = np.dot(v1[0], v2[0].T)\n",
     "    # is d greater than the threshold?\n",
-    "    res = None\n",
+    "    res = d > threshold\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
